syntax = "proto3";

package parser;

import "health/rpc.proto";
import "vendor/google/rpc/status.proto";
import "google/api/annotations.proto";

option go_package = "github.com/anchorageoss/visualsign-parser/gateway/gen/parser";


service ParserService {
  rpc Parse(ParseRequest) returns (ParseResponse) {
    option (google.api.http) = {
      post: "/visualsign/api/v1/parse"
      body: "*"
    };
  }
}

// Chain represents supported blockchain networks
enum Chain {
  CHAIN_UNSPECIFIED = 0;
  CHAIN_BITCOIN = 1;
  CHAIN_ETHEREUM = 2;
  CHAIN_SOLANA = 3;
  CHAIN_SUI = 4;
  CHAIN_TRON = 5;

  // Reserve space for future chains
  reserved 6 to 998;

  // Custom for extensibility
  CHAIN_CUSTOM = 999;
}


// This is a bit odd, but needed for the QOS host.
// (the QOS host receives messages which can be either parser responses or QOS-level responses)
// TODO: can we remove the need for these?
message QOSParserRequest {
  oneof input {
    ParseRequest parse_request = 1;
    health.AppHealthRequest health_request = 2;
  }
}

message QOSParserResponse {
  oneof output {
    ParseResponse parse_response = 1;
    health.AppHealthResponse health_response = 3;
    google.rpc.Status status = 4;
  }
}

message ParseRequest {
  string unsigned_payload = 1;
  Chain chain = 2;
  ChainMetadata chain_metadata = 3;
}

message ChainMetadata {
  oneof metadata {
    EthereumMetadata ethereum = 1;
    SolanaMetadata solana = 2;
  }
}

message ParseResponse {
  // Parsed transaction details
  ParsedTransaction parsed_transaction = 1;
}

message Metadata {
  string key = 1;
  string value = 2;
}

message SignatureMetadata {
  string value = 1;                    // Signature of content hash (computed over parent content using algorithm specified in metadata)
  repeated Metadata metadata = 2;      // Generic metadata about the signature (e.g., algorithm, issuer, timestamp as key-value pairs)
}

message ParsedTransactionPayload {
  // JSON string representation of the parsed payload
  string parsed_payload = 1;
  // SHA-256 digest of the unsigned payload passed to the parser
  string input_payload_digest = 2;
  // SHA-256 digest of the metadata passed to the parser
  // The metadata is serialized with Borsh before hashing.
  // If there is no metadata, this field is the empty SHA-256 digest
  // (e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855)
  string metadata_digest = 3;
  // Legacy field. Will be removed, please do not use!
  string signable_payload = 4;
}

message ParsedTransaction {
  ParsedTransactionPayload payload = 1;
  Signature signature = 2;
}

enum SignatureScheme {
  SIGNATURE_SCHEME_UNSPECIFIED = 0;
  // Scheme used for Turnkey app proofs
  SIGNATURE_SCHEME_TURNKEY_P256_EPHEMERAL_KEY = 1;
}

message Signature {
  SignatureScheme scheme = 1;
  string public_key = 2;
  string message = 3;
  string signature = 4;
}

message EthereumMetadata {
  // Network identifier string (e.g., "ETHEREUM_MAINNET", "POLYGON_MAINNET", "ARBITRUM_MAINNET")
  optional string network_id = 2;
  optional Abi abi = 1;
}

message SolanaMetadata {
  // Network identifier string (e.g., "SOLANA_MAINNET", "SOLANA_DEVNET")
  optional string network_id = 2;
  optional Idl idl = 1;
  // Map of program_id (base58 string) to IDL definitions
  // Allows wallet to provide multiple IDLs, one per program
  map<string, Idl> idl_mappings = 3;
}

message Abi {
  string value = 1;                         // JSON ABI definition
  optional SignatureMetadata signature = 2; // Optional ABI signature with metadata
}

message Idl {
  string value = 1;                         // JSON IDL (Interface Definition Language) definition
  optional SolanaIdlType idl_type = 2;      // Type of Solana IDL (e.g., Anchor)
  optional string idl_version = 3;          // IDL version (e.g., "0.30.0")
  optional SignatureMetadata signature = 4; // Optional IDL signature with metadata
  optional string program_name = 5;         // Wallet-provided name for the program (e.g., "JupiterLend")
}

enum SolanaIdlType {
  SOLANA_IDL_TYPE_UNSPECIFIED = 0;
  SOLANA_IDL_TYPE_ANCHOR = 1;
}
